# resonance-flow

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  objects.inv  publish.sh  pyproject.toml
.github/workflows/: publish.yml  test.yml
api/losses/: index.html
api/model/: index.html
docs/: index.md  theory.md
examples/interactive_tutorials/: biophysical_constraints.ipynb  differentiable_nmr.ipynb  self_correction_demo.ipynb  transformer_to_coords.ipynb
resonance_flow/: __init__.py  losses.py  model.py  train.py
search/: search_index.json
tests/: test_invariance.py  test_nmr_physics.py  test_pbc.py  test_pipeline.py  test_validation.py
theory/: index.html
