[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resonance-flow"
version = "0.1.1"
description = "Self-correcting protein folding with differentiable NMR constraints"
readme = "README.md"
license = "MIT"
authors = [{name = "George Elkins"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "jax-md",
    "numpy<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.setuptools.packages.find]
include = ["resonance_flow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line length handled by formatter
    "N806",  # uppercase variables in functions (scientific constants: Da, R, S2)
    "N803",  # uppercase arguments (common in biophysics)
    "N802",  # uppercase function names (physics convention)
    "B017",  # asserting on Exception (acceptable in generic error tests)
    "B904",  # raise from (not yet fixed project-wide)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional
"tests/*" = ["N", "B"]   # naming/bugbear not enforced in tests

[tool.ruff.lint.isort]
known-first-party = ["resonance_flow"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
exclude = ["build/", "dist/", "scratch/", "site/"]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*", "examples.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "jaxlib.*",
    "flax.*",
    "optax.*",
    "jax_md.*",
    "numpy.*",
]
ignore_missing_imports = true

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
